--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [14, 16, 18]
+        node-version: [16, 18]
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.operating-system }}
     steps:
