--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -2,9 +2,10 @@ name: Matrix demo
 on: [push]
 jobs:
   build:
+    continue-on-error: true
     strategy:
       matrix:
-        node-version: [16, 18]
+        node-version: [14, 16, 18]
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.operating-system }}
     steps:
