--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -5,8 +5,13 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        node-version: [14, 16, 18]
+        node-version: [16, 18]
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - node-version: 14
+            operating-system: ubuntu-latest
+          - node-version: 14
+            operating-system: windows-latest
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: Get code
