--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Get code
         uses: actions/download-artifact@v4
         with:
-          name: ${{ github.event.inputs.artifact-name }}
+          name: ${{ inputs.artifact-name }}
       - name: List files
         run: ls
       - name: Output information
