--- a/.github/workflows/use-reusable.yml
+++ b/.github/workflows/use-reusable.yml
@@ -71,6 +71,14 @@ jobs:
     uses: ./.github/workflows/reusable.yml
     with:
       artifact-name: dist-files
+    # secrets:
+    # some-secret: ${{ secrets.SOME_SECRET }}
+  print-reusable-output:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print deploy output
+        run: echo "The result of the deployment operation is ${{ needs.deploy.outputs.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
